douban/autoReplyMobile
  File "autoReplyMobile.py", line 50
    "ck": cookie.get('ck'),
        ^
SyntaxError: invalid syntax
